--- a/my-backend/.env
+++ b/my-backend/.env
@@ -1,1 +1,2 @@
-GEMINI_API_KEY=AIzaSyBbTkHtQc3LNWYktMoLNRszwT4mcH02vnQ
+MONGO_URI=mongodb+srv://sajal8:mostafizuR2025@cluster0.z7ibr.mongodb.net/Todo?retryWrites=true&w=majority
+GEMINI_API_KEY=AIzaSyAqPazZP_nZ65AcWRXf68WlisDPDbIzKiQ
