--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.2",
